<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="12.5dp"
    android:paddingRight="12.5dp"
    android:paddingTop="46dp">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0.5dp"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:background="@drawable/selector_f5f5f7_6dp"
        android:gravity="center"
        android:text="@string/photo1"
        android:textColor="@color/TitleColor"
        android:textSize="@dimen/text_size_15sp" />

    <Button
        android:id="@+id/btn_album"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.5dp"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:background="@drawable/selector_f5f5f7_6dp"
        android:gravity="center"
        android:text="@string/photo2"
        android:textColor="@color/TitleColor"
        android:textSize="@dimen/text_size_15sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/selector_f5f5f7_6dp"
        android:gravity="center"
        android:text="@string/photo3"
        android:textColor="@color/TitleColor"
        android:textSize="@dimen/text_size_15sp" />

</LinearLayout>