<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickHandler"
            type="com.at.arouter.third.ui.aty.work_order.CreateWorkOrderActivity.ClickHandler" />

        <variable
            name="dataHandler"
            type="com.at.arouter.third.ui.aty.work_order.CreateWorkOrderActivity.DataHandler" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/padding_left_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:paddingBottom="15dp"
        android:paddingTop="13dp">

        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/a918"
            android:maxLines="10"
            android:minHeight="134dp"
            android:minLines="5"
            android:scrollbars="vertical"
            android:textColor="#274057"
            android:textColorHint="#8794A2"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/rl_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/et_question"
            android:layout_marginTop="8dp"
            android:background="@drawable/frame_e6e6e6_0dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@mipmap/camera" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:src="@mipmap/delete_icon"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_contact"
        style="@style/padding_left_right"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a61"
            android:textColor="#274057"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:digits="@string/letter"
            android:hint="@string/a62"
            android:maxLength="30"
            android:textColor="#274057"
            android:textColorHint="#C4CED3"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        style="@style/margin_left_right"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_34a9ff_bg"
        android:gravity="center"
        android:text="@string/a63"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>

</layout>